// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`base > common 1`] = `
[
  "index.d.ts",
  "index.esm.d.ts",
  "index.esm.js",
  "index.esm.js.map",
  "index.esm.min.js",
  "index.esm.min.js.map",
  "index.iife.js",
  "index.iife.js.map",
  "index.iife.min.js",
  "index.iife.min.js.map",
  "index.umd.js",
  "index.umd.js.map",
  "index.umd.min.js",
  "index.umd.min.js.map",
]
`;

exports[`base > common 2`] = `
"index.d.ts:
declare function export_default(a: number, b: string): string;

export { export_default as default };
"
`;

exports[`base > common 3`] = `
"index.esm.d.ts:
declare function export_default(a: number, b: string): string;

export { export_default as default };
"
`;

exports[`base > common 4`] = `
"index.esm.js:
function index(a, b) {
  return a + b;
}

export { index as default };
//# sourceMappingURL=index.esm.js.map
"
`;

exports[`base > common 5`] = `
"index.esm.js.map:
{"version":3,"file":"index.esm.js","sources":["../src/index.ts"],"sourcesContent":["export default function (a: number, b: string) {\\n  return a + b\\n}\\n"],"names":[],"mappings":"AAAA,cAAA,CAAyB,GAAW,CAAW,EAAA;AAC7C,EAAA,OAAO,CAAI,GAAA,CAAA,CAAA;AACb;;;;"}"
`;

exports[`base > common 6`] = `
"index.esm.min.js:
function t(t,e){return t+e}export{t as default};
//# sourceMappingURL=index.esm.min.js.map
"
`;

exports[`base > common 7`] = `
"index.esm.min.js.map:
{"version":3,"file":"index.esm.min.js","sources":["../src/index.ts"],"sourcesContent":["export default function (a: number, b: string) {\\n  return a + b\\n}\\n"],"names":["index","a","b"],"mappings":"AAAA,SAAAA,EAAyBC,EAAWC,GAClC,OAAOD,EAAIC,CACb"}"
`;

exports[`base > common 8`] = `
"index.iife.js:
var JiekTestFoo = (function (exports) {
  'use strict';

  function index(a, b) {
    return a + b;
  }

  exports.default = index;

  Object.defineProperty(exports, '__esModule', { value: true });

  return exports;

})({});
//# sourceMappingURL=index.iife.js.map
"
`;

exports[`base > common 9`] = `
"index.iife.js.map:
{"version":3,"file":"index.iife.js","sources":["../src/index.ts"],"sourcesContent":["export default function (a: number, b: string) {\\n  return a + b\\n}\\n"],"names":[],"mappings":";;;EAAA,cAAA,CAAyB,GAAW,CAAW,EAAA;EAC7C,EAAA,OAAO,CAAI,GAAA,CAAA,CAAA;EACb;;;;;;;;;;;;"}"
`;

exports[`base > common 10`] = `
"index.iife.min.js:
var JiekTestFoo=function(e){"use strict";return e.default=function(e,t){return e+t},Object.defineProperty(e,"__esModule",{value:!0}),e}({});
//# sourceMappingURL=index.iife.min.js.map
"
`;

exports[`base > common 11`] = `
"index.iife.min.js.map:
{"version":3,"file":"index.iife.min.js","sources":["../src/index.ts"],"sourcesContent":["export default function (a: number, b: string) {\\n  return a + b\\n}\\n"],"names":["a","b"],"mappings":"0DAAA,SAAyBA,EAAWC,GAClC,OAAOD,EAAIC,CACb"}"
`;

exports[`base > common 12`] = `
"index.umd.js:
(function (global, factory) {
  typeof exports === 'object' && typeof module !== 'undefined' ? factory(exports) :
  typeof define === 'function' && define.amd ? define(['exports'], factory) :
  (global = typeof globalThis !== 'undefined' ? globalThis : global || self, factory(global.JiekTestFoo = {}));
})(this, (function (exports) { 'use strict';

  function index(a, b) {
    return a + b;
  }

  exports.default = index;

  Object.defineProperty(exports, '__esModule', { value: true });

}));
//# sourceMappingURL=index.umd.js.map
"
`;

exports[`base > common 13`] = `
"index.umd.js.map:
{"version":3,"file":"index.umd.js","sources":["../src/index.ts"],"sourcesContent":["export default function (a: number, b: string) {\\n  return a + b\\n}\\n"],"names":[],"mappings":";;;;;;EAAA,cAAA,CAAyB,GAAW,CAAW,EAAA;EAC7C,EAAA,OAAO,CAAI,GAAA,CAAA,CAAA;EACb;;;;;;;;;;"}"
`;

exports[`base > common 14`] = `
"index.umd.min.js:
!function(e,t){"object"==typeof exports&&"undefined"!=typeof module?t(exports):"function"==typeof define&&define.amd?define(["exports"],t):t((e="undefined"!=typeof globalThis?globalThis:e||self).JiekTestFoo={})}(this,(function(e){"use strict";e.default=function(e,t){return e+t},Object.defineProperty(e,"__esModule",{value:!0})}));
//# sourceMappingURL=index.umd.min.js.map
"
`;

exports[`base > common 15`] = `
"index.umd.min.js.map:
{"version":3,"file":"index.umd.min.js","sources":["../src/index.ts"],"sourcesContent":["export default function (a: number, b: string) {\\n  return a + b\\n}\\n"],"names":["a","b"],"mappings":"6PAAA,SAAyBA,EAAWC,GAClC,OAAOD,EAAIC,CACb"}"
`;

exports[`single package and multiple entries > common 1`] = `
[
  "bar.d.ts",
  "bar.esm.d.ts",
  "bar.esm.js",
  "bar.esm.js.map",
  "bar.esm.min.js",
  "bar.esm.min.js.map",
  "bar.iife.js",
  "bar.iife.js.map",
  "bar.iife.min.js",
  "bar.iife.min.js.map",
  "bar.umd.js",
  "bar.umd.js.map",
  "bar.umd.min.js",
  "bar.umd.min.js.map",
  "index.d.ts",
  "index.esm.d.ts",
  "index.esm.js",
  "index.esm.js.map",
  "index.esm.min.js",
  "index.esm.min.js.map",
  "index.iife.js",
  "index.iife.js.map",
  "index.iife.min.js",
  "index.iife.min.js.map",
  "index.umd.js",
  "index.umd.js.map",
  "index.umd.min.js",
  "index.umd.min.js.map",
]
`;

exports[`single package and multiple entries > common 2`] = `
"bar.d.ts:
declare function bar(): string;

export { bar };
"
`;

exports[`single package and multiple entries > common 3`] = `
"bar.esm.d.ts:
declare function bar(): string;

export { bar };
"
`;

exports[`single package and multiple entries > common 4`] = `
"bar.esm.js:
function bar() {
  return "bar";
}

export { bar };
//# sourceMappingURL=bar.esm.js.map
"
`;

exports[`single package and multiple entries > common 5`] = `
"bar.esm.js.map:
{"version":3,"file":"bar.esm.js","sources":["../src/bar.ts"],"sourcesContent":["export function bar() {\\n  return 'bar'\\n}\\n"],"names":[],"mappings":"AAAO,SAAS,GAAM,GAAA;AACpB,EAAO,OAAA,KAAA,CAAA;AACT;;;;"}"
`;

exports[`single package and multiple entries > common 6`] = `
"bar.esm.min.js:
function r(){return"bar"}export{r as bar};
//# sourceMappingURL=bar.esm.min.js.map
"
`;

exports[`single package and multiple entries > common 7`] = `
"bar.esm.min.js.map:
{"version":3,"file":"bar.esm.min.js","sources":["../src/bar.ts"],"sourcesContent":["export function bar() {\\n  return 'bar'\\n}\\n"],"names":["bar"],"mappings":"AAAO,SAASA,IACP,MAAA,KACT"}"
`;

exports[`single package and multiple entries > common 8`] = `
"bar.iife.js:
var singlePackageAndMultipleEntriesbar = (function (exports) {
  'use strict';

  function bar() {
    return "bar";
  }

  exports.bar = bar;

  return exports;

})({});
//# sourceMappingURL=bar.iife.js.map
"
`;

exports[`single package and multiple entries > common 9`] = `
"bar.iife.js.map:
{"version":3,"file":"bar.iife.js","sources":["../src/bar.ts"],"sourcesContent":["export function bar() {\\n  return 'bar'\\n}\\n"],"names":[],"mappings":";;;EAAO,SAAS,GAAM,GAAA;EACpB,EAAO,OAAA,KAAA,CAAA;EACT;;;;;;;;;;"}"
`;

exports[`single package and multiple entries > common 10`] = `
"bar.iife.min.js:
var singlePackageAndMultipleEntriesbar=function(r){"use strict";return r.bar=function(){return"bar"},r}({});
//# sourceMappingURL=bar.iife.min.js.map
"
`;

exports[`single package and multiple entries > common 11`] = `
"bar.iife.min.js.map:
{"version":3,"file":"bar.iife.min.js","sources":["../src/bar.ts"],"sourcesContent":["export function bar() {\\n  return 'bar'\\n}\\n"],"names":[],"mappings":"6EAAO,WACE,MAAA,KACT"}"
`;

exports[`single package and multiple entries > common 12`] = `
"bar.umd.js:
(function (global, factory) {
  typeof exports === 'object' && typeof module !== 'undefined' ? factory(exports) :
  typeof define === 'function' && define.amd ? define(['exports'], factory) :
  (global = typeof globalThis !== 'undefined' ? globalThis : global || self, factory(global.singlePackageAndMultipleEntriesbar = {}));
})(this, (function (exports) { 'use strict';

  function bar() {
    return "bar";
  }

  exports.bar = bar;

}));
//# sourceMappingURL=bar.umd.js.map
"
`;

exports[`single package and multiple entries > common 13`] = `
"bar.umd.js.map:
{"version":3,"file":"bar.umd.js","sources":["../src/bar.ts"],"sourcesContent":["export function bar() {\\n  return 'bar'\\n}\\n"],"names":[],"mappings":";;;;;;EAAO,SAAS,GAAM,GAAA;EACpB,EAAO,OAAA,KAAA,CAAA;EACT;;;;;;;;"}"
`;

exports[`single package and multiple entries > common 14`] = `
"bar.umd.min.js:
!function(e,n){"object"==typeof exports&&"undefined"!=typeof module?n(exports):"function"==typeof define&&define.amd?define(["exports"],n):n((e="undefined"!=typeof globalThis?globalThis:e||self).singlePackageAndMultipleEntriesbar={})}(this,(function(e){"use strict";e.bar=function(){return"bar"}}));
//# sourceMappingURL=bar.umd.min.js.map
"
`;

exports[`single package and multiple entries > common 15`] = `
"bar.umd.min.js.map:
{"version":3,"file":"bar.umd.min.js","sources":["../src/bar.ts"],"sourcesContent":["export function bar() {\\n  return 'bar'\\n}\\n"],"names":[],"mappings":"gRAAO,WACE,MAAA,KACT"}"
`;

exports[`single package and multiple entries > common 16`] = `
"index.d.ts:
declare function foo(): string;

export { foo };
"
`;

exports[`single package and multiple entries > common 17`] = `
"index.esm.d.ts:
declare function foo(): string;

export { foo };
"
`;

exports[`single package and multiple entries > common 18`] = `
"index.esm.js:
function foo() {
  return "foo";
}

export { foo };
//# sourceMappingURL=index.esm.js.map
"
`;

exports[`single package and multiple entries > common 19`] = `
"index.esm.js.map:
{"version":3,"file":"index.esm.js","sources":["../src/index.ts"],"sourcesContent":["export function foo() {\\n  return 'foo'\\n}\\n"],"names":[],"mappings":"AAAO,SAAS,GAAM,GAAA;AACpB,EAAO,OAAA,KAAA,CAAA;AACT;;;;"}"
`;

exports[`single package and multiple entries > common 20`] = `
"index.esm.min.js:
function o(){return"foo"}export{o as foo};
//# sourceMappingURL=index.esm.min.js.map
"
`;

exports[`single package and multiple entries > common 21`] = `
"index.esm.min.js.map:
{"version":3,"file":"index.esm.min.js","sources":["../src/index.ts"],"sourcesContent":["export function foo() {\\n  return 'foo'\\n}\\n"],"names":["foo"],"mappings":"AAAO,SAASA,IACP,MAAA,KACT"}"
`;

exports[`single package and multiple entries > common 22`] = `
"index.iife.js:
var singlePackageAndMultipleEntries = (function (exports) {
  'use strict';

  function foo() {
    return "foo";
  }

  exports.foo = foo;

  return exports;

})({});
//# sourceMappingURL=index.iife.js.map
"
`;

exports[`single package and multiple entries > common 23`] = `
"index.iife.js.map:
{"version":3,"file":"index.iife.js","sources":["../src/index.ts"],"sourcesContent":["export function foo() {\\n  return 'foo'\\n}\\n"],"names":[],"mappings":";;;EAAO,SAAS,GAAM,GAAA;EACpB,EAAO,OAAA,KAAA,CAAA;EACT;;;;;;;;;;"}"
`;

exports[`single package and multiple entries > common 24`] = `
"index.iife.min.js:
var singlePackageAndMultipleEntries=function(n){"use strict";return n.foo=function(){return"foo"},n}({});
//# sourceMappingURL=index.iife.min.js.map
"
`;

exports[`single package and multiple entries > common 25`] = `
"index.iife.min.js.map:
{"version":3,"file":"index.iife.min.js","sources":["../src/index.ts"],"sourcesContent":["export function foo() {\\n  return 'foo'\\n}\\n"],"names":[],"mappings":"0EAAO,WACE,MAAA,KACT"}"
`;

exports[`single package and multiple entries > common 26`] = `
"index.umd.js:
(function (global, factory) {
  typeof exports === 'object' && typeof module !== 'undefined' ? factory(exports) :
  typeof define === 'function' && define.amd ? define(['exports'], factory) :
  (global = typeof globalThis !== 'undefined' ? globalThis : global || self, factory(global.singlePackageAndMultipleEntries = {}));
})(this, (function (exports) { 'use strict';

  function foo() {
    return "foo";
  }

  exports.foo = foo;

}));
//# sourceMappingURL=index.umd.js.map
"
`;

exports[`single package and multiple entries > common 27`] = `
"index.umd.js.map:
{"version":3,"file":"index.umd.js","sources":["../src/index.ts"],"sourcesContent":["export function foo() {\\n  return 'foo'\\n}\\n"],"names":[],"mappings":";;;;;;EAAO,SAAS,GAAM,GAAA;EACpB,EAAO,OAAA,KAAA,CAAA;EACT;;;;;;;;"}"
`;

exports[`single package and multiple entries > common 28`] = `
"index.umd.min.js:
!function(e,n){"object"==typeof exports&&"undefined"!=typeof module?n(exports):"function"==typeof define&&define.amd?define(["exports"],n):n((e="undefined"!=typeof globalThis?globalThis:e||self).singlePackageAndMultipleEntries={})}(this,(function(e){"use strict";e.foo=function(){return"foo"}}));
//# sourceMappingURL=index.umd.min.js.map
"
`;

exports[`single package and multiple entries > common 29`] = `
"index.umd.min.js.map:
{"version":3,"file":"index.umd.min.js","sources":["../src/index.ts"],"sourcesContent":["export function foo() {\\n  return 'foo'\\n}\\n"],"names":[],"mappings":"6QAAO,WACE,MAAA,KACT"}"
`;

exports[`single package and multiple exports > common 1`] = `
[
  "index.d.ts",
  "index.esm.d.ts",
  "index.esm.js",
  "index.esm.js.map",
  "index.esm.min.js",
  "index.esm.min.js.map",
  "index.iife.js",
  "index.iife.js.map",
  "index.iife.min.js",
  "index.iife.min.js.map",
  "index.umd.js",
  "index.umd.js.map",
  "index.umd.min.js",
  "index.umd.min.js.map",
]
`;

exports[`single package and multiple exports > common 2`] = `
"index.d.ts:
declare function foo(): string;

export { foo };
"
`;

exports[`single package and multiple exports > common 3`] = `
"index.esm.d.ts:
declare function foo(): string;

export { foo };
"
`;

exports[`single package and multiple exports > common 4`] = `
"index.esm.js:
function foo() {
  return "foo";
}

export { foo };
//# sourceMappingURL=index.esm.js.map
"
`;

exports[`single package and multiple exports > common 5`] = `
"index.esm.js.map:
{"version":3,"file":"index.esm.js","sources":["../src/index.ts"],"sourcesContent":["export function foo() {\\n  return 'foo'\\n}\\n"],"names":[],"mappings":"AAAO,SAAS,GAAM,GAAA;AACpB,EAAO,OAAA,KAAA,CAAA;AACT;;;;"}"
`;

exports[`single package and multiple exports > common 6`] = `
"index.esm.min.js:
function o(){return"foo"}export{o as foo};
//# sourceMappingURL=index.esm.min.js.map
"
`;

exports[`single package and multiple exports > common 7`] = `
"index.esm.min.js.map:
{"version":3,"file":"index.esm.min.js","sources":["../src/index.ts"],"sourcesContent":["export function foo() {\\n  return 'foo'\\n}\\n"],"names":["foo"],"mappings":"AAAO,SAASA,IACP,MAAA,KACT"}"
`;

exports[`single package and multiple exports > common 8`] = `
"index.iife.js:
var singlePackageAndSingleEntryWithOtherExports = (function (exports) {
  'use strict';

  function foo() {
    return "foo";
  }

  exports.foo = foo;

  return exports;

})({});
//# sourceMappingURL=index.iife.js.map
"
`;

exports[`single package and multiple exports > common 9`] = `
"index.iife.js.map:
{"version":3,"file":"index.iife.js","sources":["../src/index.ts"],"sourcesContent":["export function foo() {\\n  return 'foo'\\n}\\n"],"names":[],"mappings":";;;EAAO,SAAS,GAAM,GAAA;EACpB,EAAO,OAAA,KAAA,CAAA;EACT;;;;;;;;;;"}"
`;

exports[`single package and multiple exports > common 10`] = `
"index.iife.min.js:
var singlePackageAndSingleEntryWithOtherExports=function(n){"use strict";return n.foo=function(){return"foo"},n}({});
//# sourceMappingURL=index.iife.min.js.map
"
`;

exports[`single package and multiple exports > common 11`] = `
"index.iife.min.js.map:
{"version":3,"file":"index.iife.min.js","sources":["../src/index.ts"],"sourcesContent":["export function foo() {\\n  return 'foo'\\n}\\n"],"names":[],"mappings":"sFAAO,WACE,MAAA,KACT"}"
`;

exports[`single package and multiple exports > common 12`] = `
"index.umd.js:
(function (global, factory) {
  typeof exports === 'object' && typeof module !== 'undefined' ? factory(exports) :
  typeof define === 'function' && define.amd ? define(['exports'], factory) :
  (global = typeof globalThis !== 'undefined' ? globalThis : global || self, factory(global.singlePackageAndSingleEntryWithOtherExports = {}));
})(this, (function (exports) { 'use strict';

  function foo() {
    return "foo";
  }

  exports.foo = foo;

}));
//# sourceMappingURL=index.umd.js.map
"
`;

exports[`single package and multiple exports > common 13`] = `
"index.umd.js.map:
{"version":3,"file":"index.umd.js","sources":["../src/index.ts"],"sourcesContent":["export function foo() {\\n  return 'foo'\\n}\\n"],"names":[],"mappings":";;;;;;EAAO,SAAS,GAAM,GAAA;EACpB,EAAO,OAAA,KAAA,CAAA;EACT;;;;;;;;"}"
`;

exports[`single package and multiple exports > common 14`] = `
"index.umd.min.js:
!function(e,n){"object"==typeof exports&&"undefined"!=typeof module?n(exports):"function"==typeof define&&define.amd?define(["exports"],n):n((e="undefined"!=typeof globalThis?globalThis:e||self).singlePackageAndSingleEntryWithOtherExports={})}(this,(function(e){"use strict";e.foo=function(){return"foo"}}));
//# sourceMappingURL=index.umd.min.js.map
"
`;

exports[`single package and multiple exports > common 15`] = `
"index.umd.min.js.map:
{"version":3,"file":"index.umd.min.js","sources":["../src/index.ts"],"sourcesContent":["export function foo() {\\n  return 'foo'\\n}\\n"],"names":[],"mappings":"yRAAO,WACE,MAAA,KACT"}"
`;

exports[`single package and single entry > common 1`] = `
[
  "index.d.ts",
  "index.esm.d.ts",
  "index.esm.js",
  "index.esm.js.map",
  "index.esm.min.js",
  "index.esm.min.js.map",
  "index.iife.js",
  "index.iife.js.map",
  "index.iife.min.js",
  "index.iife.min.js.map",
  "index.umd.js",
  "index.umd.js.map",
  "index.umd.min.js",
  "index.umd.min.js.map",
]
`;

exports[`single package and single entry > common 2`] = `
"index.d.ts:
declare function foo(): string;

export { foo };
"
`;

exports[`single package and single entry > common 3`] = `
"index.esm.d.ts:
declare function foo(): string;

export { foo };
"
`;

exports[`single package and single entry > common 4`] = `
"index.esm.js:
function foo() {
  return "foo";
}

export { foo };
//# sourceMappingURL=index.esm.js.map
"
`;

exports[`single package and single entry > common 5`] = `
"index.esm.js.map:
{"version":3,"file":"index.esm.js","sources":["../src/index.ts"],"sourcesContent":["export function foo() {\\n  return 'foo'\\n}\\n"],"names":[],"mappings":"AAAO,SAAS,GAAM,GAAA;AACpB,EAAO,OAAA,KAAA,CAAA;AACT;;;;"}"
`;

exports[`single package and single entry > common 6`] = `
"index.esm.min.js:
function o(){return"foo"}export{o as foo};
//# sourceMappingURL=index.esm.min.js.map
"
`;

exports[`single package and single entry > common 7`] = `
"index.esm.min.js.map:
{"version":3,"file":"index.esm.min.js","sources":["../src/index.ts"],"sourcesContent":["export function foo() {\\n  return 'foo'\\n}\\n"],"names":["foo"],"mappings":"AAAO,SAASA,IACP,MAAA,KACT"}"
`;

exports[`single package and single entry > common 8`] = `
"index.iife.js:
var singlePackageAndSingleEntry = (function (exports) {
  'use strict';

  function foo() {
    return "foo";
  }

  exports.foo = foo;

  return exports;

})({});
//# sourceMappingURL=index.iife.js.map
"
`;

exports[`single package and single entry > common 9`] = `
"index.iife.js.map:
{"version":3,"file":"index.iife.js","sources":["../src/index.ts"],"sourcesContent":["export function foo() {\\n  return 'foo'\\n}\\n"],"names":[],"mappings":";;;EAAO,SAAS,GAAM,GAAA;EACpB,EAAO,OAAA,KAAA,CAAA;EACT;;;;;;;;;;"}"
`;

exports[`single package and single entry > common 10`] = `
"index.iife.min.js:
var singlePackageAndSingleEntry=function(n){"use strict";return n.foo=function(){return"foo"},n}({});
//# sourceMappingURL=index.iife.min.js.map
"
`;

exports[`single package and single entry > common 11`] = `
"index.iife.min.js.map:
{"version":3,"file":"index.iife.min.js","sources":["../src/index.ts"],"sourcesContent":["export function foo() {\\n  return 'foo'\\n}\\n"],"names":[],"mappings":"sEAAO,WACE,MAAA,KACT"}"
`;

exports[`single package and single entry > common 12`] = `
"index.umd.js:
(function (global, factory) {
  typeof exports === 'object' && typeof module !== 'undefined' ? factory(exports) :
  typeof define === 'function' && define.amd ? define(['exports'], factory) :
  (global = typeof globalThis !== 'undefined' ? globalThis : global || self, factory(global.singlePackageAndSingleEntry = {}));
})(this, (function (exports) { 'use strict';

  function foo() {
    return "foo";
  }

  exports.foo = foo;

}));
//# sourceMappingURL=index.umd.js.map
"
`;

exports[`single package and single entry > common 13`] = `
"index.umd.js.map:
{"version":3,"file":"index.umd.js","sources":["../src/index.ts"],"sourcesContent":["export function foo() {\\n  return 'foo'\\n}\\n"],"names":[],"mappings":";;;;;;EAAO,SAAS,GAAM,GAAA;EACpB,EAAO,OAAA,KAAA,CAAA;EACT;;;;;;;;"}"
`;

exports[`single package and single entry > common 14`] = `
"index.umd.min.js:
!function(e,n){"object"==typeof exports&&"undefined"!=typeof module?n(exports):"function"==typeof define&&define.amd?define(["exports"],n):n((e="undefined"!=typeof globalThis?globalThis:e||self).singlePackageAndSingleEntry={})}(this,(function(e){"use strict";e.foo=function(){return"foo"}}));
//# sourceMappingURL=index.umd.min.js.map
"
`;

exports[`single package and single entry > common 15`] = `
"index.umd.min.js.map:
{"version":3,"file":"index.umd.min.js","sources":["../src/index.ts"],"sourcesContent":["export function foo() {\\n  return 'foo'\\n}\\n"],"names":[],"mappings":"yQAAO,WACE,MAAA,KACT"}"
`;

exports[`with no resolve exports > common 1`] = `
[
  "index.d.ts",
  "index.esm.d.ts",
  "index.esm.js",
  "index.esm.js.map",
  "index.esm.min.js",
  "index.esm.min.js.map",
  "index.iife.js",
  "index.iife.js.map",
  "index.iife.min.js",
  "index.iife.min.js.map",
  "index.umd.js",
  "index.umd.js.map",
  "index.umd.min.js",
  "index.umd.min.js.map",
]
`;

exports[`with no resolve exports > common 2`] = `
"index.d.ts:
declare function foo(): string;

export { foo };
"
`;

exports[`with no resolve exports > common 3`] = `
"index.esm.d.ts:
declare function foo(): string;

export { foo };
"
`;

exports[`with no resolve exports > common 4`] = `
"index.esm.js:
function foo() {
  return "foo";
}

export { foo };
//# sourceMappingURL=index.esm.js.map
"
`;

exports[`with no resolve exports > common 5`] = `
"index.esm.js.map:
{"version":3,"file":"index.esm.js","sources":["../src/index.ts"],"sourcesContent":["export function foo() {\\n  return 'foo'\\n}\\n"],"names":[],"mappings":"AAAO,SAAS,GAAM,GAAA;AACpB,EAAO,OAAA,KAAA,CAAA;AACT;;;;"}"
`;

exports[`with no resolve exports > common 6`] = `
"index.esm.min.js:
function o(){return"foo"}export{o as foo};
//# sourceMappingURL=index.esm.min.js.map
"
`;

exports[`with no resolve exports > common 7`] = `
"index.esm.min.js.map:
{"version":3,"file":"index.esm.min.js","sources":["../src/index.ts"],"sourcesContent":["export function foo() {\\n  return 'foo'\\n}\\n"],"names":["foo"],"mappings":"AAAO,SAASA,IACP,MAAA,KACT"}"
`;

exports[`with no resolve exports > common 8`] = `
"index.iife.js:
var withNoResolveExport = (function (exports) {
  'use strict';

  function foo() {
    return "foo";
  }

  exports.foo = foo;

  return exports;

})({});
//# sourceMappingURL=index.iife.js.map
"
`;

exports[`with no resolve exports > common 9`] = `
"index.iife.js.map:
{"version":3,"file":"index.iife.js","sources":["../src/index.ts"],"sourcesContent":["export function foo() {\\n  return 'foo'\\n}\\n"],"names":[],"mappings":";;;EAAO,SAAS,GAAM,GAAA;EACpB,EAAO,OAAA,KAAA,CAAA;EACT;;;;;;;;;;"}"
`;

exports[`with no resolve exports > common 10`] = `
"index.iife.min.js:
var withNoResolveExport=function(o){"use strict";return o.foo=function(){return"foo"},o}({});
//# sourceMappingURL=index.iife.min.js.map
"
`;

exports[`with no resolve exports > common 11`] = `
"index.iife.min.js.map:
{"version":3,"file":"index.iife.min.js","sources":["../src/index.ts"],"sourcesContent":["export function foo() {\\n  return 'foo'\\n}\\n"],"names":[],"mappings":"8DAAO,WACE,MAAA,KACT"}"
`;

exports[`with no resolve exports > common 12`] = `
"index.umd.js:
(function (global, factory) {
  typeof exports === 'object' && typeof module !== 'undefined' ? factory(exports) :
  typeof define === 'function' && define.amd ? define(['exports'], factory) :
  (global = typeof globalThis !== 'undefined' ? globalThis : global || self, factory(global.withNoResolveExport = {}));
})(this, (function (exports) { 'use strict';

  function foo() {
    return "foo";
  }

  exports.foo = foo;

}));
//# sourceMappingURL=index.umd.js.map
"
`;

exports[`with no resolve exports > common 13`] = `
"index.umd.js.map:
{"version":3,"file":"index.umd.js","sources":["../src/index.ts"],"sourcesContent":["export function foo() {\\n  return 'foo'\\n}\\n"],"names":[],"mappings":";;;;;;EAAO,SAAS,GAAM,GAAA;EACpB,EAAO,OAAA,KAAA,CAAA;EACT;;;;;;;;"}"
`;

exports[`with no resolve exports > common 14`] = `
"index.umd.min.js:
!function(e,o){"object"==typeof exports&&"undefined"!=typeof module?o(exports):"function"==typeof define&&define.amd?define(["exports"],o):o((e="undefined"!=typeof globalThis?globalThis:e||self).withNoResolveExport={})}(this,(function(e){"use strict";e.foo=function(){return"foo"}}));
//# sourceMappingURL=index.umd.min.js.map
"
`;

exports[`with no resolve exports > common 15`] = `
"index.umd.min.js.map:
{"version":3,"file":"index.umd.min.js","sources":["../src/index.ts"],"sourcesContent":["export function foo() {\\n  return 'foo'\\n}\\n"],"names":[],"mappings":"iQAAO,WACE,MAAA,KACT"}"
`;
